@@ -255,7 +255,7 @@ MACAddress=cb:a9:87:65:43:21</screen>
     fixable by creating Udev rules for custom persistent symlinks.
     The case of network cards is covered separately in
     <xref linkend="ch-scripts-network"/>, and sound card configuration can
-    be found in <ulink url="&blfs-root;view/svn/postlfs/devices.html">BLFS</ulink>.</para>
+    be found in <ulink url="&blfs-root;view/&short-version;/postlfs/devices.html">BLFS</ulink>.</para>
 
     <para>For each of your devices that is likely to have this problem
     (even if the problem doesn't exist in your current Linux distribution),
