@@ -21,42 +21,42 @@
   <itemizedlist>
 
     <listitem><para>A text mode browser such as <ulink
-    url='&blfs-root;/view/svn/basicnet/lynx.html'>Lynx</ulink>
+    url='&blfs-root;/view/&short-version;/basicnet/lynx.html'>Lynx</ulink>
     will allow you to easily view the BLFS book in one virtual terminal, while
     building packages in another.</para></listitem>
 
     <listitem><para>The <ulink
-    url='&blfs-root;/view/svn/general/gpm.html'>GPM</ulink> package will allow
+    url='&blfs-root;/view/&short-version;/general/gpm.html'>GPM</ulink> package will allow
     you to perform copy/paste actions in your virtual
     terminals.</para></listitem>
 
     <listitem><para>If you are in a situation where static IP configuration
     does not meet your networking requirements, installing a package
-    such as <ulink url='&blfs-root;/view/svn/basicnet/dhcpcd.html'>dhcpcd</ulink>
+    such as <ulink url='&blfs-root;/view/&short-version;/basicnet/dhcpcd.html'>dhcpcd</ulink>
     or the client portion of <ulink
-    url='&blfs-root;/view/svn/basicnet/dhcp.html'>dhcp</ulink> may be
+    url='&blfs-root;/view/&short-version;/basicnet/dhcp.html'>dhcp</ulink> may be
     useful.</para></listitem>
 
     <listitem><para>Installing <ulink
-    url='&blfs-root;/view/svn/postlfs/sudo.html'>sudo</ulink> may be useful for
+    url='&blfs-root;/view/&short-version;/postlfs/sudo.html'>sudo</ulink> may be useful for
     building packages as a non-root user and easily installing the resulting
     packages in your new system.  </para></listitem>
 
     <listitem><para>If you want to access your new system from a remote system
     within a comfortable GUI environment, install <ulink
-    url='&blfs-root;/view/svn/postlfs/openssh.html'>openssh</ulink> and its
+    url='&blfs-root;/view/&short-version;/postlfs/openssh.html'>openssh</ulink> and its
     prerequsite, <ulink
-    url='&blfs-root;/view/svn/postlfs/openssl.html'>openssl</ulink>.
+    url='&blfs-root;/view/&short-version;/postlfs/openssl.html'>openssl</ulink>.
     </para></listitem>
 
     <listitem><para>To make fetching files over the internet easier, install
-    <ulink url='&blfs-root;/view/svn/basicnet/wget.html'>wget</ulink>.
+    <ulink url='&blfs-root;/view/&short-version;/basicnet/wget.html'>wget</ulink>.
     </para></listitem>
 
     <listitem><para>If one or more of your disk drives have a GUID partition
     table (GPT), either <ulink
-    url='&blfs-root;/view/svn/postlfs/gptfdisk.html'>gptfdisk</ulink> or <ulink
-    url='&blfs-root;/view/svn/postlfs/parted.html'>parted</ulink> will be useful.
+    url='&blfs-root;/view/&short-version;/postlfs/gptfdisk.html'>gptfdisk</ulink> or <ulink
+    url='&blfs-root;/view/&short-version;/postlfs/parted.html'>parted</ulink> will be useful.
     </para></listitem>
 
     <listitem><para>Finally, a review of the following configuration files
