@@ -1,3 +1,6 @@
+2014-07-02 Bruce Dubbs <bdubbs@linuxfromscratch.org>
+   * Remove obsolete check for /proc/ksyms in modules boot script
+
 2014-06-29 Bruce Dubbs <bdubbs@linuxfromscratch.org>
    * Remove systemd references and files
 
